[ADD][config/cloudinary] Integrate Cloudinary for image upload
